# 2048_dqn

./: .gitignore  README.md  fast2048.py  fast2048_env.py  load_experience.py  main.py  n_network.py  n_step_buffer.py  play_browser.py  plot_train_log.py  priorized_replay_buffer.py  pyproject.toml  record_video.py  replay_buffer.py  rust_sim_smoke_test.py  sitecustomize.py  train_log.txt
rust_sim/: Cargo.toml  pyproject.toml
rust_sim/src/: lib.rs
